[package]
name = "hello_remote_world"
version = "0.1.0"
authors = ["VS Code <vscode@microsoft.com>"]
edition = "2018"

[lib]
path ="./src/lib/lib.rs"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
sysinfo = "0.16.1"
log = "0.4"
regex = "1.4.3"
tracing = "0.1.25"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.16"
tracing-error = "0.1.2"
tracing-appender = "0.1.2"
color-spantrace = "0.1.6"
color-eyre = "0.5"
eyre = "0.6.5"
lazy_static = "1.4.0"
scopeguard = "1.1.0"
futures = "0.3.14"